updated sidebar, but products not in the store yet. Focus on diplaying all products before doing the filtering

--- a/client/index.css
+++ b/client/index.css
@@ -35,3 +35,24 @@ nav a:first-child:hover {
   width: 40px;
   border-radius: 50%;
 }
+
+.sidenav {
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 250px; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: lightgray; /* Black */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 20px;
+}
+
+.main {
+  margin-left: 250px; /* Same as the width of the sidebar */
+  padding: 0px 10px;
+}
+
+.container-nav {
+  display: flex;
+}
