--- a/client/index.css
+++ b/client/index.css
@@ -1,97 +1,101 @@
 #app {
-	height: 100%;
-	width: 100%;
-	margin: 0;
+  height: 100%;
+  width: 100%;
+  margin: 0;
 }
 
 #logo {
-	height: 40px;
-	width: 40px;
-	border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
 }
 
 #product-details-container {
-	margin: 2% 5%;
-	display: flex;
-	align-content: space-between;
+  margin: 2% 5%;
+  display: flex;
+  align-content: space-between;
 }
 
 #all-products-container {
-	margin: 80px 5%;
-	display: flex;
-	flex-flow: column;
-	max-width: 50%;
+  margin: 80px 5%;
+  display: flex;
+  flex-flow: column;
+  max-width: 50%;
+}
+
+#slider-div {
+  display: flex;
 }
 
 nav {
-	height: 80px;
-	width: 100%;
+  height: 80px;
+  width: 100%;
 }
 
 nav a {
-	margin: 0 1em;
+  margin: 0 1em;
 }
 
 form {
-	min-width: 50%;
-	max-width: 50%;
+  min-width: 50%;
+  max-width: 50%;
 }
 
 a {
-	text-decoration: none;
-	color: #753ebd;
+  text-decoration: none;
+  color: #753ebd;
 }
 
 a:hover {
-	border-bottom: 1px solid;
+  border-bottom: 1px solid;
 }
 
 nav a:first-child:hover {
-	border: none;
+  border: none;
 }
 
 .details-image img {
-	height: 300px;
+  height: 300px;
 }
 
 .details-image {
-	margin: 5%;
+  margin: 5%;
 }
 
 .card-image-top {
-	height: 300px;
+  height: 300px;
 }
 
 .card {
-	padding: 10px;
+  padding: 10px;
 }
 
 .price-and-cart {
-	display: flex;
-	width: 100%;
+  display: flex;
+  width: 100%;
 }
 
 .sidenav {
-	height: 100%; /* Full-height: remove this if you want "auto" height */
-	width: 250px; /* Set the width of the sidebar */
-	position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-	z-index: 1; /* Stay on top */
-	top: 80px; /* Stay at the top */
-	left: 0;
-	background-color: lightgray; /* Black */
-	overflow-x: hidden; /* Disable horizontal scroll */
-	padding-top: 20px;
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 250px; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+  top: 80px; /* Stay at the top */
+  left: 0;
+  background-color: lightgray; /* Black */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 20px;
 }
 
 .main {
-	margin-left: 250px; /* Same as the width of the sidebar */
-	padding: 0px 10px;
+  margin-left: 250px; /* Same as the width of the sidebar */
+  padding: 0px 10px;
 }
 
 .container-nav {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	z-index: 2;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
 }
